---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2020-12-20
  Changes:
    - "Remindor" - create tasks to remind you to do things
  Refactor:
    - [tech] sorting feature 
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2020-12-12
  Bugfixes:
    - [tech] fixing inherited has to be class specific
    - fixing wrong Joule calculations
    - fixing crash at load
  Changes:
    - tooltip on items: inventory amount and crafting potential
    - crafting from any item in Recipe panel
    - Recipe panel layout
    - new: Remindor
    - [tech] some more table functions
  Refactor:
    - SpecialActions
---------------------------------------------------------------------------------------------------
Version: 0.2.30
Date: 2020-12-10
  Changes:
    - putting panel for created-by in then center since it is more important
    - [tech] extend class-class to handle inherited properties
  Refactor:
    - [tech] using "class" everywhere where class pattern is used
---------------------------------------------------------------------------------------------------
Version: 0.2.29
Date: 2020-12-08
  Bugfixes:
    - fixing crafting order from recipe on any inteb-help panel causes a crash
  Changes:
    - Shift-click handler on item: select into cursor
    - zn-CH localisation by Ting_amm
  Refactor:
    - Special actions reworked (uses less localised strings)
---------------------------------------------------------------------------------------------------
Version: 0.2.28
Date: 2020-12-08
  Changes:
    - help on technologies improved
    - Alignment in technology panels
    - Correct data for inifinite technologies 
    - Prerequisite reseaches
    - Array:Clone whithout predicate was missing
    - Array:Stringify introduced
    - Common.ClickTarget re-introduced (it is only almost like CommonKey)
    - Eventmanager: Research-state things