@@ -67,6 +67,52 @@ local StackOfGoods = class:new(
 
 )
 
+function StackOfGoods:GetAmountsKey()
+    local amounts = self.Amounts
+    if not amounts then return end
+
+    local probability = (amounts.probability or 1)
+    local value = amounts.value
+
+    if not value then
+        if not amounts.min then
+            value = amounts.max
+        elseif not amounts.max then
+            value = amounts.min
+        else
+            value = (amounts.max + amounts.min) / 2
+        end
+    elseif type(value) ~= "number" then
+        return
+    end
+
+    return tostring(value * probability)
+
+end
+
+function StackOfGoods:AddOption(other)
+    local otherAmounts = other.Amounts
+
+    if otherAmounts.value and self.Amounts.value and otherAmounts.value == self.Amounts.value then
+        return
+    end
+
+    self.Amounts.min = math.min(
+        otherAmounts.value or otherAmounts.min, self.Amounts.value or self.Amounts.min
+    )
+
+    self.Amounts.max = math.max(
+        otherAmounts.value or otherAmounts.max, self.Amounts.value or self.Amounts.max
+    )
+
+    self.Amounts.value = nil
+end
+
+function StackOfGoods:Clone()
+    local amounts = Dictionary:new(self.Amounts):Clone()
+    return StackOfGoods:new(self.Goods, amounts, self.Database)
+end
+
 function StackOfGoods:new(goods, amounts, database)
     assert(release or goods)
     local self = self:adopt(self.base:new(goods.Prototype, database))
@@ -80,34 +126,6 @@ function StackOfGoods:new(goods, amounts, database)
     self.SpriteType = goods.SpriteType
     self.UsePercentage = self.Amounts.probability ~= nil
 
-    function self:GetAmountsKey()
-        local amounts = self.Amounts
-        if not amounts then return end
-
-        local probability = (amounts.probability or 1)
-        local value = amounts.value
-
-        if not value then
-            if not amounts.min then
-                value = amounts.max
-            elseif not amounts.max then
-                value = amounts.min
-            else
-                value = (amounts.max + amounts.min) / 2
-            end
-        elseif type(value) ~= "number" then
-            return
-        end
-
-        return tostring(value * probability)
-
-    end
-
-    function self:Clone(patchAmountsFunction)
-        local newAmounts = Dictionary:new(self.Amounds):Clone()
-        patchAmountsFunction(newAmounts)
-        return StackOfGoods:new(self.Goods, newAmounts, self.Database)
-    end
     return self
 
 end
